--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -12,6 +12,12 @@
     <string name="bathrooms">Nb. de salles de bain</string>
     <string name="bedrooms">Nb. de chambres</string>
     <string name="price">Prix</string>
+    <string name="address">Adresse</string>
+    <string name="registration_date">Date d\'enregistrement</string>
+    <string name="sale_date">Date de vente</string>
+    <string name="status">Statut</string>
+    <string name="sold">Vendu</string>
+    <string name="for_sale">En vente</string>
 
     <!-- TYPES OF PROPERTIES -->
     <string name="flat">Appartement</string>
