--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,6 +6,8 @@
     <string name="agent">Agent</string>
     <string name="media">Media</string>
     <string name="description">Description</string>
+    <string name="poi">Points d\'interêt</string>
+    <string name="map_thumbnail">Localisation</string>
     <string name="surface_unit">m²</string>
     <string name="surface">Surface</string>
     <string name="rooms">Nb. de pièces</string>
@@ -39,5 +41,7 @@
 
     <!-- DROPDOWN MENU -->
     <string name="export">Exporter les données</string>
+    <string name="create">Créer une propriété</string>
+    <string name="edit">Editer la propriété</string>
 
 </resources>
