--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -30,6 +30,8 @@
     <string name="loading_map">Carte en cours de chargement…</string>
     <string name="location">Position</string>
     <string name="current_location">Position actuelle</string>
+    <string name="latitude">Latitude:</string>
+    <string name="longitude">Longitude:</string>
 
     <!-- TYPES OF PROPERTIES -->
     <string name="flat">Appartement</string>
