--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="loading_map">Loading map…</string>
     <string name="location">Location</string>
     <string name="current_location">Current location</string>
+    <string name="latitude">Latitude:</string>
+    <string name="longitude">Longitude:</string>
 
     <!-- TYPE OF PROPERTIES -->
     <string name="flat">Flat</string>
