--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,13 +18,14 @@
     <string name="surface">Surface</string>
     <string name="surface_in">Surface en</string>
     <string name="rooms">Nb. de pièces</string>
-    <string name="bathrooms">Nb. de salles de bain</string>
+    <string name="bathrooms">Nb. salles de bain</string>
     <string name="bedrooms">Nb. de chambres</string>
     <string name="price">Prix</string>
     <string name="price_in">Prix en</string>
     <string name="address">Adresse</string>
-    <string name="registration_date">Date d\'enregistrement</string>
+    <string name="registration_date">Date d\'enregistr.</string>
     <string name="sale_date">Date de vente</string>
+    <string name="date_template">aaaa-mm-jj</string>
     <string name="status">Statut</string>
     <string name="sold">Vendu</string>
     <string name="for_sale">En vente</string>
@@ -47,6 +48,7 @@
     <string name="photo_deletion_dialog_title">Confirmation de suppression de photo</string>
     <string name="photo_deletion_dialog_text">Supprimer la photo \"%s\" ?</string>
     <string name="photo_deleted">Photo \"%s\" supprimée !</string>
+    <string name="invalid_input">Erreur ! Seuls des chiffres sont autorisés !</string>
 
     <!-- TYPES OF PROPERTIES -->
     <string name="flat">Appartement</string>
