EditScreen: DropDownMenu composable and DatePicker composable replaced with clickable TextFieldItem composable

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,14 +17,14 @@
     <string name="surface_unit">m²</string>
     <string name="surface">Surface</string>
     <string name="surface_in">Surface en</string>
-    <string name="rooms">Nb. de pièces</string>
+    <string name="rooms">Nb. pièces</string>
     <string name="bathrooms">Nb. salles de bain</string>
-    <string name="bedrooms">Nb. de chambres</string>
+    <string name="bedrooms">Nb. chambres</string>
     <string name="price">Prix</string>
     <string name="price_in">Prix en</string>
     <string name="address">Adresse</string>
-    <string name="registration_date">Date d\'enregistr.</string>
-    <string name="sale_date">Date de vente</string>
+    <string name="registration_date">Date enregistr.</string>
+    <string name="sale_date">Date vente</string>
     <string name="date_template">aaaa-mm-jj</string>
     <string name="status">Statut</string>
     <string name="sold">Vendu</string>
