--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -56,6 +56,7 @@
     <string name="photo_deletion_dialog_text">Supprimer la photo \"%s\" ?</string>
     <string name="photo_deleted">Photo \"%s\" supprimée !</string>
     <string name="invalid_input">Erreur ! Seuls des chiffres sont autorisés !</string>
+    <string name="general_error">Une erreur est survenue !</string>
 
     <!-- TYPES OF PROPERTIES -->
     <string name="not_assigned">Non assigné…</string>
