Room: Creation of model, DAO and repository for 'Type' object. General refactoring for Room in progress (some errors still remain)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="general_error">An error has occurred!</string>
 
     <!-- TYPE OF PROPERTIES -->
-    <string name="not_assigned">Not assigned…</string>
+    <string name="unassigned">Unassigned…</string>
     <string name="flat">Flat</string>
     <string name="house">House</string>
     <string name="duplex">Duplex</string>
