--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -59,7 +59,7 @@
     <string name="general_error">Une erreur est survenue !</string>
 
     <!-- TYPES OF PROPERTIES -->
-    <string name="not_assigned">Non assigné…</string>
+    <string name="unassigned">Non attribué…</string>
     <string name="flat">Appartement</string>
     <string name="house">Maison</string>
     <string name="duplex">Duplex</string>
