--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,14 +52,16 @@
     <string name="recorded">Data recorded!</string>
     <string name="perms_revoked">The map is unavailable because\nlocation permissions\nhave been revoked!</string>
     <string name="network_unavailable">Network unavailable!</string>
+    <string name="address_incomplete">Address incomplete!</string>
     <string name="photo_deletion_dialog_title">Photo deletion confirmation</string>
-    <string name="photo_deletion_dialog_text">Delete photo \"%s\"?</string>
+    <string name="photo_deletion_dialog_text">Delete photo %s?</string>
+    <string name="no_label">without label</string>
     <string name="photo_deleted">Photo \"%s\" deleted!</string>
     <string name="invalid_input">Error! Only digits are allowed!</string>
     <string name="general_error">An error has occurred!</string>
 
     <!-- TYPE OF PROPERTIES -->
-    <string name="unassigned">Unassigned…</string>
+    <string name="_unassigned_">Unassigned</string>
     <string name="flat">Flat</string>
     <string name="house">House</string>
     <string name="duplex">Duplex</string>
